--- a/index.html
+++ b/index.html
@@ -60,7 +60,17 @@
             <h1 id="infoTitle">Patch Notes</h1>
             <button class="exitButton" id="infoExit">X</button>
             <div id="Info">
-                <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, esse vero dolore nesciunt illo ipsum cupiditate minus doloribus dolor aliquid, ab eius fuga molestias, eligendi possimus quae non officiis tenetur reprehenderit illum maxime tempora facere unde omnis! Veritatis fugit amet iusto iste illo beatae, a eius doloribus eaque sunt aspernatur!</h1>
+                <div>
+                    <h2>23/6/2025:</h2>
+                    <h2> - You click the skibidi button to gain skibidi bucks.</h2>
+                    <h2> - You use those skibidi bucks to purchase upgrades.</h2>
+                    <h2> - Button upgrades make your button much better by giving you more skibidi bucks per click.</h2>
+                    <h2> - Idle upgrades give you passive money generation per second.</h2>
+
+                    <br>
+
+                    <h2> - Planning to add many more features from my older version such as rebirthing / kanye west final boss / buying different buttons / and a save mechanic.</h2>
+                </div>
             </div>
         </div>
     </div>
